--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.8/css/line.css">
 
     <!-- --------- CSS ---------- -->
-    <link rel="stylesheet" href="C:\Users\kumar\OneDrive\Documents\WebDevelpoment\Port\styles.css">
+    <link rel="stylesheet" href="styles.css">
 
     <!-- --------- FAVICON ---------- -->
     <link rel="shortcut icon" href="C:\Users\kumar\OneDrive\Documents\WebDevelpoment\Port\favicon.png" type="image/x-icon">
