--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="styles.css">
 
     <!-- --------- FAVICON ---------- -->
-    <link rel="shortcut icon" href="C:\Users\kumar\OneDrive\Documents\WebDevelpoment\Port\favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
 
     <title>Portfolio | Ludiflex</title>
 </head>
