--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
           </div>
           <div class="featured-image">
             <div class="image">
-                <img src="C:\Users\kumar\OneDrive\Documents\WebDevelpoment\Port\avatar.png" alt="avatar">
+                <img src="avatar.png" alt="avatar">
             </div>
           </div>
           <div class="scroll-icon-box">
