--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- --------- FAVICON ---------- -->
     <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
 
-    <title>Portfolio | Ludiflex</title>
+    <title>Portfolio | Nitish Kumar</title>
 </head>
 <body>
    <div class="container">
@@ -58,7 +58,7 @@
        <section class="featured-box" id="home">
           <div class="featured-text">
             <div class="featured-text-card">
-                <span>John Doe</span>
+                <span>Nitish Kumar</span>
             </div>
             <div class="featured-name">
                 <p>I'm <span class="typedText"></span></p>
@@ -100,11 +100,12 @@
           <div class="row">
             <div class="col">
                 <div class="about-info">
-                    <h3>My introduction</h3>
-                    <p>I am well-versed in HTML, CSS and JavaScript , and other cutting edge
-                       frameworks and libraries,which allows me to implement interactive features.
-                       Additionally, I have experirence working with content management systems (CMS) like
-                       WordPress.
+                    <h3>My Introduction</h3>
+                    <p>About Me:
+
+Hello! I’m Nitish Kumar, an Electrical Engineering student at the National Institute of Technology, Silchar. My academic journey began at Jawahar Navodaya Vidyalaya, where I developed a strong foundation that has propelled me through my higher education.
+
+I am proficient in programming languages such as C, C++, HTML, and CSS, and have hands-on experience with MATLAB and Simulink. My skill set also includes excellent time management, communication, and writing abilities.
                     </p>
                     <div class="about-btn">
                         <button class="btn">Download CV <i class="uil uil-import"></i></button>
@@ -119,32 +120,32 @@
                     <div class="skills-list">
                         <span>HTML</span>
                         <span>CSS</span>
-                        <span>Bootstrap</span>
+
                         <span>JavaScript</span>
-                        <span>Vue</span>
+                      
                         <span>React</span>
-                        <span>Angular</span>
+                   
                     </div>
                 </div>
                 <div class="skills-box">
                     <div class="skills-header">
-                        <h3>Backend</h3>
+                        <h3>Languages</h3>
                     </div>
                     <div class="skills-list">
-                        <span>PHP</span>
-                        <span>JAVA</span>
-                        <span>Python</span>
+                        <span>C</span>
                         <span>C++</span>
+                        <span>Python</span>
+                        <span>MATLAB</span>
                     </div>
                 </div>
                 <div class="skills-box">
                     <div class="skills-header">
-                        <h3>Database</h3>
+                        <h3> Platforms</h3>
                     </div>
                     <div class="skills-list">
-                        <span>MySQL</span>
-                        <span>PostgreSQL</span>
-                        <span>MongoDB</span>
+                        <span>Web</span>
+                        <span>Windows</span>
+                        <span>Linux</span>
                     </div>
                 </div>
             </div>
@@ -155,23 +156,24 @@
 
        <section class="section" id="projects">
           <div class="top-header">
-              <h1>Projects</h1>
+              <h1>Internships, Projects & Achievements</h1>
           </div>
           <div class="project-container">
             <div class="project-box">
                 <i class="uil uil-briefcase-alt"></i>
-                <h3>Completed</h3>
-                <label>15+ Finished Projects</label>
+                <h3>Internship</h3>
+                <label>Satyendra Nath Bose Summer Internship 2024 at NIT Silchar</label>
             </div>
             <div class="project-box">
                 <i class="uil uil-users-alt"></i>
-                <h3>Clients</h3>
-                <label>25+ Happy Clients</label>
+                <h3>Projects</h3>
+                <label>Music Player Application</label>
             </div>
             <div class="project-box">
                 <i class="uil uil-award"></i>
-                <h3>Experience</h3>
-                <label>7+ Years in the field</label>
+                <h3> Achievements</h3>
+                <label>Qualified JEE Advanced 2021</label>
+                 <label>Awarded With School Topper Certificate(Class10th & 12th)</label>
             </div>
           </div>
        </section>
@@ -187,8 +189,8 @@
              <div class="col">
                 <div class="contact-info">
                     <h2>Find Me <i class="uil uil-corner-right-down"></i></h2>
-                    <p><i class="uil uil-envelope"></i> Email: john@doe.com</p>
-                    <p><i class="uil uil-phone"></i> Tel: +250 708 770 000</p>
+                    <p><i class="uil uil-envelope"></i> Email: kumarni30744@gmail.com</p>
+                    <p><i class="uil uil-phone"></i> Tel: +91 620 6859 325</p>
                 </div>
              </div>
              <div class="col">
@@ -214,7 +216,7 @@
     <!-- --------------- FOOTER --------------- -->
     <footer>
         <div class="top-footer">
-            <p>John Doe .</p>
+            <p>Nitish Kumar </p>
         </div>
         <div class="middle-footer">
             <ul class="footer-menu">
@@ -239,7 +241,7 @@
             <div class="icon"><i class="uil uil-github-alt"></i></div>
         </div>
         <div class="bottom-footer">
-            <p>Copyright &copy; <a href="#home" style="text-decoration: none;">John Doe</a> - All rights reserved</p>
+            <p>Copyright &copy; <a href="#home" style="text-decoration: none;">Nitish Kumar</a> - All rights reserved</p>
         </div>
     </footer>
 
