--- a/index.html
+++ b/index.html
@@ -103,9 +103,10 @@
                     <h3>My Introduction</h3>
                     <p>About Me:
 
-Hello! I’m Nitish Kumar, an Electrical Engineering student at the National Institute of Technology, Silchar. My academic journey began at Jawahar Navodaya Vidyalaya, where I developed a strong foundation that has propelled me through my higher education.
-
-I am proficient in programming languages such as C, C++, HTML, and CSS, and have hands-on experience with MATLAB and Simulink. My skill set also includes excellent time management, communication, and writing abilities.
+Hello! I’m Nitish Kumar, an Electrical Engineering student at the National Institute of Technology, Silchar.
+My academic journey began at Jawahar Navodaya Vidyalaya, where I developed a strong foundation that has propelled me through my higher education.
+I am proficient in programming languages such as C, C++, HTML, and CSS, and have hands-on experience with MATLAB and Simulink.
+ My skill set also includes excellent time management, communication, and writing abilities.
                     </p>
                     <div class="about-btn">
                         <button class="btn">Download CV <i class="uil uil-import"></i></button>
@@ -162,7 +163,7 @@ I am proficient in programming languages such as C, C++, HTML, and CSS, and have
             <div class="project-box">
                 <i class="uil uil-briefcase-alt"></i>
                 <h3>Internship</h3>
-                <label>Satyendra Nath Bose Summer Internship 2024 at NIT Silchar</label>
+                <label>Satyendra Nath Bose Summer Internship <br> 2024 at NIT Silchar</label>
             </div>
             <div class="project-box">
                 <i class="uil uil-users-alt"></i>
@@ -173,7 +174,7 @@ I am proficient in programming languages such as C, C++, HTML, and CSS, and have
                 <i class="uil uil-award"></i>
                 <h3> Achievements</h3>
                 <label>Qualified JEE Advanced 2021</label>
-                 <label>Awarded With School Topper Certificate(Class10th & 12th)</label>
+                 <label>Awarded With School Topper <br> Certificate(Class10th & 12th)</label>
             </div>
           </div>
        </section>
