--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="styles.css">
 
     <!-- --------- FAVICON ---------- -->
-    <link rel="shortcut icon" href="main-logo-transparent.png" type="image/x-icon">
+    <link rel="shortcut icon" href="Favicon-32x32.png" type="image/x-icon">
 
     <title>Portfolio | Nitish Kumar</title>
 </head>
