--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@ I am proficient in programming languages such as C, C++, HTML, and CSS, and have
             <div class="project-box">
                 <i class="uil uil-briefcase-alt"></i>
                 <h3>Internship</h3>
-                <label>Satyendra Nath Bose Summer Internship <br> 2024 at NIT Silchar</label>
+                <label>Satyendra Nath Bose  <br> Summer Internship 2024 at NIT Silchar</label>
             </div>
             <div class="project-box">
                 <i class="uil uil-users-alt"></i>
@@ -173,8 +173,8 @@ I am proficient in programming languages such as C, C++, HTML, and CSS, and have
             <div class="project-box">
                 <i class="uil uil-award"></i>
                 <h3> Achievements</h3>
-                <label>Qualified JEE Advanced 2021</label>
-                 <label>Awarded With School Topper <br> Certificate(Class10th & 12th)</label>
+                <label>i)Qualified JEE Advanced 2021</label>
+                 <label>ii)Awarded With School Topper <br> Certificate(Class10th & 12th)</label>
             </div>
           </div>
        </section>
