--- a/index.html
+++ b/index.html
@@ -168,13 +168,14 @@ I am proficient in programming languages such as C, C++, HTML, and CSS, and have
             <div class="project-box">
                 <i class="uil uil-users-alt"></i>
                 <h3>Projects</h3>
-                <label>Music Player Application</label>
+                <label>i) Music Player Application</label>
+                 <label>ii) AC MicroGrid Protection (CORE)</label>
             </div>
             <div class="project-box">
                 <i class="uil uil-award"></i>
                 <h3> Achievements</h3>
-                <label>i)Qualified JEE Advanced 2021</label>
-                 <label>ii)Awarded With School Topper <br> Certificate(Class10th & 12th)</label>
+                <label>i) Qualified JEE Advanced 2021</label>
+                 <label>ii) Awarded With School Topper <br> Certificate(Class10th & 12th)</label>
             </div>
           </div>
        </section>
