--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@ I am proficient in programming languages such as C, C++, HTML, and CSS, and have
                 <i class="uil uil-briefcase-alt"></i>
                 <h3>Internship</h3>
                 <label>Satyendra Nath Bose  <br> Summer Internship 2024 at NIT Silchar</label>
-                  <label> About:Video-to-Video Translation with Lip Syncing</label>
+                  <label> About: Video-to-Video <br>Translation with Lip Syncing</label>
             </div>
             <div class="project-box">
                 <i class="uil uil-users-alt"></i>
