--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
     <!-- --------------- HEADER --------------- -->
       <nav id="header">
         <div class="nav-logo">
-            <p class="nav-name">Doe</p>
-            <span>.</span>
+            <p class="nav-name">Nitish Kumar</p>
         </div>
         <div class="nav-menu" id="myNavMenu">
             <ul class="nav_menu_list">
@@ -165,7 +164,7 @@ I am proficient in programming languages such as C, C++, HTML, and CSS, and have
                 <i class="uil uil-briefcase-alt"></i>
                 <h3>Internship</h3>
                 <label>Satyendra Nath Bose  <br> Summer Internship 2024 at NIT Silchar</label>
-                  <label> About: Video-to-Video <br>Translation with Lip Syncing</label>
+                  <label> About Internship : Video-to-Video <br>Translation with Lip Syncing</label>
             </div>
             <div class="project-box">
                 <i class="uil uil-users-alt"></i>
