--- a/index.html
+++ b/index.html
@@ -100,9 +100,9 @@
             <div class="col">
                 <div class="about-info">
                     <h3>My Introduction</h3>
-                    <p>About Me:
+                    <p>About Me:<br>
 
-Hello! I’m Nitish Kumar, an Electrical Engineering student at the National Institute of Technology, Silchar.
+Hello! I’m Nitish Kumar, an Electrical Engineering student at the National Institute of Technology, Silchar.<br>
 My academic journey began at Jawahar Navodaya Vidyalaya, where I developed a strong foundation that has propelled me through my higher education.
 I am proficient in programming languages such as C, C++, HTML, and CSS, and have hands-on experience with MATLAB and Simulink.
  My skill set also includes excellent time management, communication, and writing abilities.
