--- a/index.html
+++ b/index.html
@@ -163,8 +163,9 @@ I am proficient in programming languages such as C, C++, HTML, and CSS, and have
             <div class="project-box">
                 <i class="uil uil-briefcase-alt"></i>
                 <h3>Internship</h3>
-                <label>Satyendra Nath Bose  <br> Summer Internship 2024 at NIT Silchar</label>
-                  <label>About Internship : Video-to-Video <br>Translation with Lip Syncing</label>
+                <label>i)Satyendra Nath Bose  <br> Summer Internship 2024 at NIT Silchar <br> About Internship:
+               Video-to-Video <br>Translation with Lip Syncing</label>
+                  <label>ii) Internship at Bharat Heavy Electrical Ltd <br>.(BHEL) Varanasi,India</label>
             </div>
             <div class="project-box">
                 <i class="uil uil-users-alt"></i>
