--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <div class="circle"></div>
                 </li>
                 <li class="nav_list">
-                    <a href="#projects" class="nav-link">Projects</a>
+                    <a href="#projects" class="nav-link">Internships & Projects</a>
                     <div class="circle"></div>
                 </li>
                 <li class="nav_list">
@@ -164,8 +164,8 @@ I am proficient in programming languages such as C, C++, HTML, and CSS, and have
                 <i class="uil uil-briefcase-alt"></i>
                 <h3>Internship</h3>
                 <label>i)Satyendra Nath Bose  <br> Summer Internship 2024 at NIT Silchar <br> About Internship:
-               Video-to-Video <br>Translation with Lip Syncing</label>
-                  <label>ii) Internship at Bharat Heavy Electrical Ltd <br>.(BHEL) Varanasi,India</label>
+               Video-to-Video <br>Translation with Lip Syncing.</label>
+                  <label>ii) Internship at Bharat Heavy Electrical Ltd.</label>
             </div>
             <div class="project-box">
                 <i class="uil uil-users-alt"></i>
