--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@ I am proficient in programming languages such as C, C++, HTML, and CSS, and have
             <div class="project-box">
                 <i class="uil uil-briefcase-alt"></i>
                 <h3>Internship</h3>
-                <label>i)Satyendra Nath Bose  <br> Summer Internship 2024 at NIT Silchar <br> About Internship:
+                <label>i)Satyendra Nath Bose  <br> Summer Internship 2024 at NIT Silchar <br>
                Video-to-Video <br>Translation with Lip Syncing.</label>
                   <label>ii) Internship at Bharat Heavy Electrical Ltd.</label>
             </div>
