--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                     <p>About Me:<br>
 
 Hello! I’m Nitish Kumar, an Electrical Engineering student at the National Institute of Technology, Silchar.<br>
-My academic journey began at Jawahar Navodaya Vidyalaya, where I developed a strong foundation that has propelled me through my higher education.
+My academic journey began at Jawahar Navodaya Vidyalaya, where I developed a strong foundation that has propelled me through my higher education.<br>
 I am proficient in programming languages such as C, C++, HTML, and CSS, and have hands-on experience with MATLAB and Simulink.
  My skill set also includes excellent time management, communication, and writing abilities.
                     </p>
@@ -163,9 +163,9 @@ I am proficient in programming languages such as C, C++, HTML, and CSS, and have
             <div class="project-box">
                 <i class="uil uil-briefcase-alt"></i>
                 <h3>Internship</h3>
-                <label>i)Satyendra Nath Bose  <br> Summer Internship 2024 at NIT Silchar <br>
+                <label>i)Satyendra Nath Bose  <br>Summer Internship 2024 at NIT Silchar <br>
                Video-to-Video <br>Translation with Lip Syncing.</label>
-                  <label>ii) Internship at Bharat Heavy Electrical Ltd.</label>
+                  <label>ii)Internship at Bharat Heavy Electrical Ltd.</label>
             </div>
             <div class="project-box">
                 <i class="uil uil-users-alt"></i>
