--- a/index.html
+++ b/index.html
@@ -166,6 +166,7 @@ I am proficient in programming languages such as C, C++, HTML, and CSS, and have
                 <label>i)Satyendra Nath Bose  <br>Summer Internship 2024 at NIT Silchar <br>
                Video-to-Video <br>Translation with Lip Syncing.</label>
                   <label>ii)Internship at Bharat Heavy Electrical Ltd.</label>
+                 <label>  </label>
             </div>
             <div class="project-box">
                 <i class="uil uil-users-alt"></i>
