--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@ I am proficient in programming languages such as C, C++, HTML, and CSS, and have
                 <label>i)Satyendra Nath Bose  <br>Summer Internship 2024 at NIT Silchar <br>
                Video-to-Video <br>Translation with Lip Syncing.</label>
                   <label>ii)Internship at Bharat Heavy Electrical Ltd.</label>
-                 <label>  </label>
+                 <label>..</label>
             </div>
             <div class="project-box">
                 <i class="uil uil-users-alt"></i>
@@ -188,7 +188,7 @@ I am proficient in programming languages such as C, C++, HTML, and CSS, and have
        <section class="section" id="contact">
           <div class="top-header">
             <h1>Get in touch</h1>
-            <span>Do you have a project in your mind, contact me here</span>
+            <span>For More Information You Can Contact via given Contacts Details</span>
           </div>
           <div class="row">
              <div class="col">
