--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@ I am proficient in programming languages such as C, C++, HTML, and CSS, and have
        <section class="section" id="contact">
           <div class="top-header">
             <h1>Get in touch</h1>
-            <span>For More Information You Can Contact via given Contacts Details</span>
+            <span>For More Information You Can Contact me via given Contacts Details</span>
           </div>
           <div class="row">
              <div class="col">
